k8s/apps/kiwix/endpoints.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: kiwix-external
  namespace: kiwix
  labels:
    kubernetes.io/service-name: kiwix-external
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.14
    conditions:
      ready: true
ports:
  - port: 8080
    protocol: TCP
