k8s/apps/kiwix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiwix-external
  namespace: kiwix
spec:
  selector: { app: kiwix }
  ports:
    - port: 8080
      targetPort: 8080
